--- a/formpage.html
+++ b/formpage.html
@@ -24,8 +24,8 @@
 			</ul>
 		</nav>
 	</header>
-
-	<h1>Crea tu propio CV</h1>
+<main class="principal-content">
+	<h1 class="principal-title">Crea tu propio CV</h1>
 	<section class="forms">
 		<section class="personalizatucv">
 			<ul class="personalizar">
@@ -279,7 +279,7 @@
 			</section>
 		</div>
 	</section>
-
+</main>
 	 <footer class="footer">
 		<p class="copy">Copyright &copy;NaN!</p>
 		<div class="up-button"><a href="#personsaldetails-content">up-button</a>
