--- a/formpage.html
+++ b/formpage.html
@@ -24,7 +24,7 @@
 			</ul>
 		</nav>
 	</header>
-<main class="principal-content">
+<main id="principal-content" class="principal-content">
 	<h1 class="principal-title">Crea tu propio CV</h1>
 	<section class="forms">
 		<section class="personalizatucv">
@@ -291,7 +291,7 @@
 </main>
 	 <footer class="footer">
 		<p class="copy">Copyright &copy;NaN!</p>
-		<div class="up-button"><a href="#personsaldetails-content">up-button</a>
+		<div class="up-button"><a href="#principal-content">up-button</a>
 		</div>
 	</footer>
 
