--- a/formpage.html
+++ b/formpage.html
@@ -36,6 +36,44 @@
 		</section>
 
 		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
+			<!--Selección de Colores  -->
+			<fieldset id="perdetfiel" class="section">
+			<legend class="datospergloria">Elige estilos
+				<span class="btnSection btnPersonalData"></span>
+        <span class="btnRemove hidden"></span>
+			</legend>
+			<section>
+				<h2>Selecciona tus colores</h2>
+				<ul class="colors">
+					<li class="style-1 color_option">
+						<div class="lateral-1"></div>
+						<div class="principal-1"></div>
+					</li>
+					<li class="style-2 color_option">
+						<div class="lateral-2"></div>
+						<div class="principal-2"></div>
+					</li>
+					<li class="style-3 color_option">
+						<div class="lateral-3"></div>
+						<div class="principal-3"></div>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2>Selecciona tu fuente</h2>
+				<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				</ul>
+			</section>
+				<div id="select-styles" class="boxfield">
+						<div class="input-form-buttoms">
+							<input type="button" name="delete" value="Borrar">
+					  	<input type="button" name="save" value="Guardar">
+						</div>
+					</div>
+			</fieldset>
 			<!-- Datos personales -->
 			<fieldset id="perdetfiel" class="section">
 			<legend class="datospergloria">Datos personales
@@ -298,5 +336,6 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/datospers.js"></script>
 	<script type="text/javascript" src="js/habilidades.js"></script>
+	<script type="text/javascript" src="js/colors.js"></script>
 </body>
 </html>
