select colors intent

--- a/formpage.html
+++ b/formpage.html
@@ -45,15 +45,15 @@
 			<section>
 				<h2>Selecciona tus colores</h2>
 				<ul class="colors">
-					<li class="style-1 color_option">
+					<li data-theme-class="style-1" class="color_option">
 						<div class="lateral-1"></div>
 						<div class="principal-1"></div>
 					</li>
-					<li class="style-2 color_option">
+					<li data-theme-class="style-2" class="color_option">
 						<div class="lateral-2"></div>
 						<div class="principal-2"></div>
 					</li>
-					<li class="style-3 color_option">
+					<li data-theme-class="style-3" class="color_option">
 						<div class="lateral-3"></div>
 						<div class="principal-3"></div>
 					</li>
@@ -255,7 +255,7 @@
 	</section>
 
 	<section class="cv">
-		<section class="prev-info-personaldates prev-contact">
+		<section class="prev-info-personaldates prev-contact color-lateral">
 			<h1 class="prev-titles">Datos de contacto</h1>
 				<div class="prev-photo">
 					<img src="http://via.placeholder.com/120x120" alt="Foto Personal" id="foto">
@@ -309,7 +309,7 @@
 					</section>
 			  </section>
 			<section class="prev-info-extra">
-				<section class="prev-skills">
+				<section class="prev-skills color-lateral">
 					<h2 class="prev-titles">Habilidades<hr></h2>
 					<ul class="box-skills">
 					<li class="skill1"><p class="skill-name"></p>
