--- a/formpage.html
+++ b/formpage.html
@@ -26,19 +26,18 @@
 	</header>
 <main id="principal-content" class="principal-content">
 	<h1 class="principal-title">Crea tu propio CV</h1>
+	<section class="personalizatucv">
+		<ul class="personalizar">
+			<li class="perscolor"><img src="images/paleta.png"></li>
+			<li class="persfuente"><img src="images/fuente.png"</li>
+			<li class="persestilo"><img src="images/escribe.svg"></li>
+		</ul>
+	</section>
 	<section class="forms">
-		<section class="personalizatucv">
-			<ul class="personalizar">
-				<li class="perscolor"><img src="images/paleta.png"></li>
-				<li class="persfuente"><img src="images/fuente.png"</li>
-				<li class="persestilo"><img src="images/escribe.svg"></li>
-			</ul>
-		</section>
-
 		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
 			<!-- Datos personales -->
 			<fieldset id="perdetfiel" class="section">
-			<legend class="datospergloria">Datos personales
+			<legend class="openMenu">Datos personales
 				<span class="btnSection btnPersonalData"></span>
         <span class="btnRemove hidden"></span>
 			</legend>
@@ -97,9 +96,10 @@
 
 			<!-- experiencia laboral -->
 			<fieldset id="jobfiel" class="section">
-				<legend class="datospergloria">Experiencia Laboral
+				<legend class="openMenu">Experiencia Laboral
 					<span class="btnSection btnJob"></span>
-        	<span class="btnRemove hidden"></span> </legend>
+        	<span class="btnRemove hidden"></span>
+				</legend>
 
 				<div id="job-data" class="boxfield hidden">
 					<div class="input-form">
@@ -147,7 +147,7 @@
 			</fieldset>
 			<!-- experiencia educativa -->
 			<fieldset id="edufiel" class="section">
-				<legend class="">Educación
+				<legend class="openMenu">Educación
 					<span class="btnSection btnEducation"></span>
         	<span class="btnRemove hidden"></span>
 				</legend>
@@ -174,7 +174,7 @@
 			<!-- habilidades -->
 
 			<fieldset id="skillsfiel" class="section">
-				<legend>Habilidades <span class="btnSection btnSkills"></span>
+				<legend class="openMenu">Habilidades <span class="btnSection btnSkills"></span>
 				<span class="btnRemove hidden"></span> </legend>
 					<div id="skills-data" class="boxfield hidden">
 
@@ -194,7 +194,7 @@
 
 			<!-- otros datos-->
 			<fieldset  id="otherdetfiel" class="section">
-				<legend>Otros datos de interés
+				<legend class="openMenu">Otros datos de interés
 					<span class="btnSection btnOtherDetails"></span>
         	<span class="btnRemove hidden"></span>
 				</legend>
