--- a/formpage.html
+++ b/formpage.html
@@ -17,7 +17,10 @@
 		</div>
 		<nav>
 			<ul class="menu">
-				<li><img class="compartir" src="images/compartir2.png" alt="compartir"></li>
+				<li>
+					<img class="compartir" src="images/compartir2.png" alt="compartir">
+				</li>
+
 				<li><img class="preview" src="images/preview1.svg" alt="vista previa"></li>
 				<li><img class="print" src="images/print.svg" alt="icono imprimir"></li>
 				<li><a href="about-us.html"><img class="aboutus" src="images/aboutus.svg" alt="about us"></a></li>
@@ -28,9 +31,28 @@
 	<h1 class="principal-title">Crea tu propio CV</h1>
 	<section class="personalizatucv">
 		<ul class="personalizar">
-			<li class="perscolor"><img src="images/paleta.png"></li>
-			<li class="persfuente"><img src="images/fuente.png"</li>
-			<li class="persestilo"><img src="images/escribe.svg"></li>
+			<li class="perscolor">
+				<div>
+					<img src="images/paleta.png">
+				</div>
+				<div><p>Paso1: Elige el color</p>
+				</div>
+			</li>
+			<li class="persfuente">
+				<div>
+					<img src="images/fuente.png">
+				</div>
+				<div>
+					<p>Paso 2: Elige la fuente</p>
+				</div>
+			</li>
+			<li class="persestilo">
+				<div>
+					<img src="images/escribe.svg" class="lapiz">
+				</div>
+				<div><p>Paso 3: Rellena tus datos</p>
+				</div>
+			</li>
 		</ul>
 	</section>
 	<section class="forms">
