--- a/formpage.html
+++ b/formpage.html
@@ -59,11 +59,11 @@
 		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
 			<!--Selección de Colores  -->
 			<fieldset id="perdetfiel" class="section">
-			<legend class="datospergloria">Elige estilos
+			<legend class="openMenu">Selecciona tus colores
 				<span class="btnSection btnPersonalData"></span>
         <span class="btnRemove hidden"></span>
 			</legend>
-			<section>
+			<section class="boxfield hidden">
 				<h2>Selecciona tus colores</h2>
 				<ul class="colors">
 					<li data-theme-class="style-1" class="color_option">
@@ -80,7 +80,7 @@
 					</li>
 				</ul>
 			</section>
-			<section>
+			<section class="boxfield hidden">
 				<h2>Selecciona tu fuente</h2>
 				<ul>
 				<li></li>
@@ -88,7 +88,7 @@
 				<li></li>
 				</ul>
 			</section>
-				<div id="select-styles" class="boxfield">
+				<div id="select-styles" class="boxfield hidden">
 						<div class="input-form-buttoms">
 							<input type="button" name="delete" value="Borrar">
 					  	<input type="button" name="save" value="Guardar">
