--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 </head>
 <body>
 	<main class="background">
-<div class="principal-logo"><img src="images/logo.png" alt=""></div>
-		<h1 class="title"><a href="formpage.html#header">Crea tu CV</a></h1>
+		<div class="principal-logo">
+			<a href="about-us.html">
+				<img src="images/logo.png" alt="logo NaN">
+			</a>
+		</div>
+			<a class="text"href="formpage.html#header">
+				<h1 class="title">Crea tu CV</h1>
+			</a>
   	</main>
 
 	<footer class="footer">
