corrigiendo conflicto y errores

--- a/formpage.html
+++ b/formpage.html
@@ -37,15 +37,7 @@
 			</ul>
 		</nav>
 	</header>
-<<<<<<< HEAD
-	<main id="principal-content" class="principal-content">
-		<h1 class="principal-title">Crea tu propio CV</h1>
-		<section class="personalizatucv">
-			<ul class="personalizar">
-				<li class="perscolor">
-					<div>
-						<img src="images/paleta.png">
-=======
+
 <main id="principal-content" class="principal-content">
 	<h1 class="principal-title">Crea tu propio CV</h1>
 	<section class="personalizatucv">
@@ -75,68 +67,6 @@
 		</ul>
 	</section>
 	<section class="forms">
-		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
-			<!--Selección de Colores  -->
-			<fieldset id="perdetfiel" class="section">
-			<legend class="openMenu">Selecciona tus colores
-				<span class="btnSection btnPersonalData"></span>
-        <span class="btnRemove hidden"></span>
-			</legend>
-			<section class="boxfield hidden">
-				<h2>Selecciona tus colores</h2>
-				<ul class="colors">
-					<li data-theme-class="style-1" class="color_option">
-						<div class="lateral-1"></div>
-						<div class="principal-1"></div>
-					</li>
-					<li data-theme-class="style-2" class="color_option">
-						<div class="lateral-2"></div>
-						<div class="principal-2"></div>
-					</li>
-					<li data-theme-class="style-3" class="color_option">
-						<div class="lateral-3"></div>
-						<div class="principal-3"></div>
-					</li>
-				</ul>
-			</section>
-			<section class="boxfield hidden">
-				<h2>Selecciona tu fuente</h2>
-				<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				</ul>
-			</section>
-				<div id="select-styles" class="boxfield hidden">
-						<div class="input-form-buttoms">
-							<input type="button" name="delete" value="Borrar">
-					  	<input type="button" name="save" value="Guardar">
-						</div>
->>>>>>> 661a9e36b24a1e7a1014668bdec70da0fb32aa82
-					</div>
-					<div>
-						<p>Paso1: Elige el color</p>
-					</div>
-				</li>
-				<li class="persfuente">
-					<div>
-						<img src="images/fuente.png">
-					</div>
-					<div>
-						<p>Paso 2: Elige la fuente</p>
-					</div>
-				</li>
-				<li class="persestilo">
-					<div>
-						<img src="images/escribe.svg" class="lapiz">
-					</div>
-					<div>
-						<p>Paso 3: Rellena tus datos</p>
-					</div>
-				</li>
-			</ul>
-		</section>
-		<section class="forms">
 			<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
 				<!--Selección de Colores  -->
 				<fieldset id="perdetfiel" class="section">
@@ -296,7 +226,7 @@
 						<div class="input-form">
 							<label for="education-type-studies">Tipo de estudios</label>
 							<select id="education-type-studies" name="education-type-studies" class="type-studies" required>
-								
+
 							</select>
 						</div>
 						<div class="input-form">
@@ -306,7 +236,7 @@
 						<div class="input-form date">
 							<div class="input-form initialyear">
 								<label for="education-year-start">Año de inicio</label>
-								<select id="education-year-start" name="education-year-start" class="years")">
+								<select id="education-year-start" name="education-year-start" class="years">
 								</select>
 							</div>
 							<div class="input-form finalyear">
