change color cv done

--- a/formpage.html
+++ b/formpage.html
@@ -75,22 +75,19 @@
 					</legend>
 					<div id="select-styles" class="boxfield hidden">
 						<div>
-							<h2>Selecciona tus colores</h2>
-							<ul class="colors">
-								<li data-theme-class="style-1" class="color_option">
-									<div class="lateral-1"></div>
-									<div class="principal-1"></div>
-								</li>
-								<li data-theme-class="style-2" class="color_option">
-									<div class="lateral-2"></div>
-									<div class="principal-2"></div>
-								</li>
-								<li data-theme-class="style-3" class="color_option">
-									<div class="lateral-3"></div>
-									<div class="principal-3"></div>
-								</li>
-							</ul>
-						</div>
+						<h2>Selecciona tus colores</h2>
+						<ul class="colors">
+							<li>
+								<input class="color_option color-1" type="button" data-theme-class="theme1">
+							</li>
+							<li>
+								<input class="color_option color-2" type="button" data-theme-class="theme2">
+							</li>
+							<li>
+								<input class="color_option color-3" type="button" data-theme-class="theme3">
+							</li>
+						</ul>
+					</div>
 						<div>
 							<h2>Selecciona tu fuente</h2>
 							<ul>
@@ -356,8 +353,8 @@
 						</ul>
 					</section>
 				</section>
-				<section class="prev-info-extra">
-					<section class="prev-skills color-lateral">
+				<section class="prev-info-extra color-lateral color-base">
+					<section class="prev-skills">
 						<h2 class="prev-titles">Habilidades<hr></h2>
 						<ul class="box-skills">
 							<li class="skill1">
