add select fonts

--- a/formpage.html
+++ b/formpage.html
@@ -90,10 +90,16 @@
 					</div>
 						<div>
 							<h2>Selecciona tu fuente</h2>
-							<ul>
-								<li></li>
-								<li></li>
-								<li></li>
+							<ul class="fonts">
+								<li>
+									<input class="font_option font-1" type="button" data-font-class="font1">
+								</li>
+								<li>
+									<input class="font_option font-2" type="button" data-font-class="font2">
+								</li>
+								<li>
+									<input class="font_option font-3" type="button" data-font-class="font3">
+								</li>
 							</ul>
 						</div>
 						<div class="input-form-buttoms">
@@ -297,7 +303,7 @@
 			</form>
 		</section>
 
-		<section class="cv">
+		<section class="cv type-font">
 			<section class="prev-info-personaldates prev-contact color-lateral">
 				<h1 class="prev-titles">Datos de contacto</h1>
 				<div class="prev-photo">
