rename fields js

--- a/formpage.html
+++ b/formpage.html
@@ -387,9 +387,9 @@
 	</footer>
 
 	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/habilidades.js"></script>
+	<script type="text/javascript" src="js/skills.js"></script>
 	<script type="text/javascript" src="js/colors.js"></script>
-	<script type="text/javascript" src="js/fill.js"></script>
+	<script type="text/javascript" src="js/fill-fields.js"></script>
 </body>
 
 </html>
